--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:25.4.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.pddstudio:encrypted-preferences:1.3.0'
+    compile 'com.github.iotaledger:iota~lib~java:0.9.10'
     testCompile 'junit:junit:4.12'
 }
