--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.pddstudio:encrypted-preferences:1.3.0'
     compile 'com.github.iotaledger:iota~lib~java:0.9.10'
+    compile 'com.google.code.gson:gson:2.8.1'
     testCompile 'junit:junit:4.12'
 }
