--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.pddstudio:encrypted-preferences:1.3.0'
     compile 'com.github.iotaledger:iota~lib~java:0.9.10'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.github.kenglxn.QRGen:android:2.4.0'
     testCompile 'junit:junit:4.12'
 }
