--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,16 +21,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:support-v4:25.3.1'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:23.3.+'
+    compile 'com.android.support:cardview-v7:25.3.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.pddstudio:encrypted-preferences:1.3.0'
     compile 'com.github.iotaledger:iota~lib~java:0.9.10'
+    compile 'com.github.gosticks:iota.flash.js-java-wrapper:0.0.2'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.github.kenglxn.QRGen:android:2.4.0'
     compile 'me.dm7.barcodescanner:zxing:1.9.8'
