--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "jenny.daniel.wifip2p"
         minSdkVersion 22
         targetSdkVersion 22
+        multiDexEnabled = true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,6 +18,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
+
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -25,13 +35,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.google.guava:guava:23.3-android'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.pddstudio:encrypted-preferences:1.3.0'
     compile 'com.github.iotaledger:iota~lib~java:0.9.10'
-    compile 'com.github.gosticks:iota.flash.js-java-wrapper:0.0.2'
+    compile 'com.eclipsesource.j2v8:j2v8:4.8.0@aar'
+    //compile 'com.github.gosticks:iotaflash.js-java-wrapper:0.0.6'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.github.kenglxn.QRGen:android:2.4.0'
     compile 'me.dm7.barcodescanner:zxing:1.9.8'
