Testnet token generation
-Added automatic token 2000i on testnet and automatic transfer to wallet

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     compile 'com.github.kenglxn.QRGen:android:2.4.0'
     compile 'me.dm7.barcodescanner:zxing:1.9.8'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
+    compile 'com.google.api-client:google-api-client:1.23.0'
     testCompile 'junit:junit:4.12'
 }
